fix global unique warnings 4

--- a/src/app/features/admin/account/containers/auth-shell/sign-xx/sign-in-page/sign-in-page.component.html
+++ b/src/app/features/admin/account/containers/auth-shell/sign-xx/sign-in-page/sign-in-page.component.html
@@ -11,7 +11,7 @@
       type="email"
       placeholder="E-Mail"
       [(ngModel)]="credentials.email"
-      name="email"
+      name="signInEmail"
       required
       email
       #emailInput="ngModel"
@@ -35,7 +35,7 @@
       type="password"
       placeholder="Passwort"
       [(ngModel)]="credentials.password"
-      name="password"
+      name="signInPassword"
       required
       minlength="6"
       #passwordInput="ngModel"
