--- a/src/app/features/account/containers/auth-shell/sign-xx/sign-up-page/sign-up-page.component.html
+++ b/src/app/features/account/containers/auth-shell/sign-xx/sign-up-page/sign-up-page.component.html
@@ -61,7 +61,7 @@
 
   <div class="form-group">
     <input
-      id="email"
+      id="signup-email"
       type="email"
       placeholder="E-Mail"
       [(ngModel)]="userData.email"
@@ -71,10 +71,10 @@
       #emailInput="ngModel"
       [class.error]="submitted && emailInput.invalid"
       autocomplete="email"
-      aria-describedby="email-error" />
+      aria-describedby="signup-email-error" />
 
     @if (submitted && emailInput.invalid) {
-      <div id="email-error" class="field-error" role="alert">
+      <div id="signup-email-error" class="field-error" role="alert">
         @if (emailInput.errors?.['required']) {
           E-Mail ist erforderlich
         }
@@ -87,7 +87,7 @@
 
   <div class="form-group">
     <input
-      id="password"
+      id="signup-password"
       type="password"
       placeholder="Passwort"
       [(ngModel)]="userData.password"
@@ -97,10 +97,10 @@
       #passwordInput="ngModel"
       [class.error]="submitted && passwordInput.invalid"
       autocomplete="new-password"
-      aria-describedby="password-error" />
+      aria-describedby="signup-password-error" />
 
     @if (submitted && passwordInput.invalid) {
-      <div id="password-error" class="field-error" role="alert">
+      <div id="signup-password-error" class="field-error" role="alert">
         @if (passwordInput.errors?.['required']) {
           Passwort ist erforderlich
         }
